--- a/chat/backend/package.json
+++ b/chat/backend/package.json
@@ -5,6 +5,19 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.1",
-    "socket.io": "^4.5.1"
+    "mongodb": "^3.6.0",
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.1",
+    "typeorm": "^0.3.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.18.0",
+    "jest": "^28.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
