--- a/chat/backend/package.json
+++ b/chat/backend/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.1",
-    "mongodb": "^3.6.0",
-    "reflect-metadata": "^0.1.13",
-    "socket.io": "^4.5.1",
-    "typeorm": "^0.3.6"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "eslint": "^8.18.0",
-    "jest": "^28.1.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
-  }
+   "name": "backend",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.18.1",
+      "mongodb": "^3.6.0",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "socket.io": "^4.5.1",
+      "typeorm": "0.3.6"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.13",
+      "@types/node": "^16.11.10",
+      "@typescript-eslint/eslint-plugin": "^5.28.0",
+      "@typescript-eslint/parser": "^5.28.0",
+      "eslint": "^8.18.0",
+      "jest": "^28.1.1",
+      "ts-node": "10.7.0",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "4.5.2"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/main.ts"
+   }
 }
