--- a/chat/backend/package.json
+++ b/chat/backend/package.json
@@ -15,11 +15,16 @@
    "devDependencies": {
       "@types/express": "^4.17.13",
       "@types/node": "^16.11.10",
-      "@typescript-eslint/eslint-plugin": "^5.28.0",
-      "@typescript-eslint/parser": "^5.28.0",
+      "@typescript-eslint/eslint-plugin": "^5.29.0",
+      "@typescript-eslint/parser": "^5.29.0",
       "artillery": "^2.0.0-18",
-      "eslint": "^8.18.0",
+      "eslint": "^7.32.0 || ^8.2.0",
+      "eslint-config-airbnb-base": "^15.0.0",
+      "eslint-config-prettier": "^8.5.0",
+      "eslint-plugin-import": "^2.25.2",
+      "eslint-plugin-prettier": "^4.0.0",
       "jest": "^28.1.1",
+      "prettier": "^2.7.1",
       "ts-node": "10.7.0",
       "ts-node-dev": "^2.0.0",
       "typescript": "4.5.2"
